login and sign up page

--- a/index.html
+++ b/index.html
@@ -37,22 +37,15 @@
                 <div class="offcanvas-body">
                     <div class="dropdown">
                         <ul class="list-unstyled">
-                            <li><a class=" fs-5 text-decoration-none text-black dropdown-toggle" href="#" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Home
-                                </a></li>
-                            <li class="mt-4"><a class=" fs-5 text-decoration-none text-black dropdown-toggle" href="#"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Shop
-                                </a></li>
-                            <li class="mt-4"><a class=" fs-5 text-decoration-none text-black dropdown-toggle" href="#"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Account
-                                </a></li>
-                            <li class="mt-4"><a class=" fs-5 text-decoration-none text-black dropdown-toggle" href="#"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Pages
-                                </a></li>
+                            <li class="nav-item mt-4 fw-bold">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item mt-4 fw-bold">
+                                <a class="nav-link active" aria-current="page" href="#">Shop</a>
+                            </li>
+                             <li class="nav-item mt-4 fw-bold">
+                                <a class="nav-link active" aria-current="page" href="#">Pages</a>
+                            </li>
                             <li class="nav-item mt-4 fw-bold">
                                 <a class="nav-link active" aria-current="page" href="#">Docs</a>
                             </li>
@@ -93,7 +86,7 @@
 
             <div class="icons position-relative">
                 <iconify-icon class="fs-3 mx-2" icon="mynaui:sun"></iconify-icon>
-                <iconify-icon class="fs-3 mx-2" icon="material-symbols:person"></iconify-icon>
+               <a class="text-black" href="./sign-in.html"><iconify-icon class="fs-3 mx-2" icon="material-symbols:person"></iconify-icon></a> 
                 <iconify-icon class="fs-3 position-relative" icon="bitcoin-icons:cart-outline"></iconify-icon>
                 <span
                     class="bg-danger text-white  opacity-75   position-absolute top-0 start-100 translate-middle rounded-5 px-2">8</span>
@@ -777,7 +770,7 @@
     </div>
 
     <!-- Footer-section -->
-
+     
     <footer style="background-color: #1c1e21;" class="footer text-white py-3">
         <div class="container ">
             <div class="row">
