--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                             <strong class="text-black-50">Total Price:</strong>
                             <strong id="totalPrice">$0.00</strong>
                         </div>
-
                     </div>
+
                 </div>
             </div>
 
@@ -392,142 +392,79 @@
                     </a>
                 </div>
                 <hr>
-                <div class="d-flex flex-wrap">
-                    <!-- 01 -->
 
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-01.png" width="200px" />
-                        <div class="fw-bold">$2.15</div>
-                        <div class="mt-2" id="underline"> Fresh pork butt steaks <br> with rosemary</div>
-                        <div class="mt-1 opacity-50">500g</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(1, 'Muesli Fitness', 2.15, './images/cart-01.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 02 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-02.png" width="200px" />
-                        <div class="fw-bold">$3.12</div>
-                        <div class="mt-2" id="underline"> Fresh orange Klementina, <br> Spain</div>
-                        <div class="mt-1 opacity-50">1kg</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div  id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(2, 'Fresh orange Klementina, <br> Spain', 3.12, './images/cart-02.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 03 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-03.png" width="200px" />
-                        <div class="fw-bold">$0.80</div>
-                        <div class="mt-2" id="underline">Pepsi soda classic, can</div>
-                        <div class="mt-1 opacity-50">330ml</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(3, 'Pepsi soda classic, can', 0.80, './images/cart-03.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 04 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-04.png" width="200px" />
-                        <div class="fw-bold">$2.99</div>
-                        <div class="mt-2" id="underline">Mozzarella mini cheese Granaloro</div>
-                        <div class="mt-1 opacity-50">250g</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div  id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(4, 'Mozzarella mini cheese Granaloro', 2.99, './images/cart-04.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- 05 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-05.png" width="200px" />
-                        <div class="fw-bold">$1.24</div>
-                        <div class="mt-2" id="underline"> Coconut, Indonesia</div>
-                        <div class="mt-1 opacity-50">1 coconut</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(5, 'Coconut, Indonesia', 1.24, './images/cart-05.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
-                            </div>
-                        </div>
-                    </div>
 
-                    <!-- 06 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-07.png" width="200px" />
-                        <div class="fw-bold">$3.95</div>
-                        <div class="mt-2" id="underline"> Pesto sauce Barilla with <br> parmesan and basil</div>
-                        <div class="mt-1 opacity-50">200g</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div  id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(7, 'Pesto sauce Barilla with <br> parmesan and basil', 3.95, './images/cart-07.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
+                <div class="container">
+
+                    <div id="mealItems" class="row"></div>
+                    <div class="d-flex flex-wrap mt-2 mb-2">
+                        <!-- 01 -->
+
+                        <div class="col-6 col-md-3 position-relative">
+                            <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
+                            <img class="img-fluid" height="200px" src="./images/cart-01.png" width="200px" />
+                            <div class="fw-bold">$2.15</div>
+                            <div class="mt-2" id="underline"> Fresh pork butt steaks <br> with rosemary</div>
+                            <div class="mt-1 opacity-50">500g</div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <div class="favorite"><i class="far fa-heart"></i></div>
+                                <div id="addtocart"
+                                    class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
+                                    <iconify-icon class="btn fs-3"
+                                        onclick="addToCart(1, 'Muesli Fitness', 2.15, './images/cart-01.png')"
+                                        icon="ph:plus-fill"></iconify-icon>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- 07 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-06.png" width="200px" />
-                        <div class="fw-bold">$1.99</div>
-                        <div class="mt-2" id="underline">Fresh mango, Spain</div>
-                        <div class="mt-1 opacity-50">1 mango</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(6, 'Fresh mango, Spain', 1.99, './images/cart-06.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
+                        <!-- 02 -->
+                        <div class="col-6 col-md-3 position-relative">
+                            <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
+                            <img class="img-fluid" height="200px" src="./images/cart-02.png" width="200px" />
+                            <div class="fw-bold">$3.12</div>
+                            <div class="mt-2" id="underline"> Fresh orange Klementina, <br> Spain</div>
+                            <div class="mt-1 opacity-50">1kg</div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <div class="favorite"><i class="far fa-heart"></i></div>
+                                <div id="addtocart"
+                                    class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
+                                    <iconify-icon class="btn fs-3"
+                                        onclick="addToCart(2, 'Fresh orange Klementina, <br> Spain', 3.12, './images/cart-02.png')"
+                                        icon="ph:plus-fill"></iconify-icon>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- 08 -->
-                    <div class="col-6 col-md-3 position-relative">
-                        <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
-                        <img class="img-fluid" height="200px" src="./images/cart-08.png" width="200px" />
-                        <div class="fw-bold">$2.40</div>
-                        <div class="mt-2" id="underline">Fresh green asparagus, bunch</div>
-                        <div class="mt-1 opacity-50">300g</div>
-                        <div class="d-flex justify-content-center mt-2">
-                            <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div id="addtocart"
-                                class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
-                                <iconify-icon class="btn fs-3"
-                                    onclick="addToCart(8, 'Fresh green asparagus, bunch', 2.40, './images/cart-08.png')"
-                                    icon="ph:plus-fill"></iconify-icon>
+                        <!-- 03 -->
+                        <div class="col-6 col-md-3 position-relative">
+                            <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
+                            <img class="img-fluid" height="200px" src="./images/cart-03.png" width="200px" />
+                            <div class="fw-bold">$0.80</div>
+                            <div class="mt-2" id="underline">Pepsi soda classic, can</div>
+                            <div class="mt-1 opacity-50">330ml</div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <div class="favorite"><i class="far fa-heart"></i></div>
+                                <div id="addtocart"
+                                    class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
+                                    <iconify-icon class="btn fs-3"
+                                        onclick="addToCart(3, 'Pepsi soda classic, can', 0.80, './images/cart-03.png')"
+                                        icon="ph:plus-fill"></iconify-icon>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- 04 -->
+                        <div class="col-6 col-md-3 position-relative">
+                            <div class="text-end me-5"><iconify-icon icon="mdi:heart-outline"></iconify-icon></div>
+                            <img class="img-fluid" height="200px" src="./images/cart-04.png" width="200px" />
+                            <div class="fw-bold">$2.99</div>
+                            <div class="mt-2" id="underline">Mozzarella mini cheese Granaloro</div>
+                            <div class="mt-1 opacity-50">250g</div>
+                            <div class="d-flex justify-content-center mt-2">
+                                <div class="favorite"><i class="far fa-heart"></i></div>
+                                <div id="addtocart"
+                                    class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
+                                    <iconify-icon class="btn fs-3"
+                                        onclick="addToCart(4, 'Mozzarella mini cheese Granaloro', 2.99, './images/cart-04.png')"
+                                        icon="ph:plus-fill"></iconify-icon>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -734,7 +671,7 @@
                         <div class="mt-1 opacity-50">500g</div>
                         <div class="d-flex justify-content-center mt-2">
                             <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div  id="addtocart"
+                            <div id="addtocart"
                                 class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
                                 <iconify-icon class="btn fs-3 bg-transparent"
                                     onclick="addToCart(10, 'Fresh pork butt steaks <br> with rosemary, <br> Spain', 9.15, './images/meet-product.png')"
@@ -768,7 +705,7 @@
                         <div class="mt-1 opacity-50">150g</div>
                         <div class="d-flex justify-content-center mt-2">
                             <div class="favorite"><i class="far fa-heart"></i></div>
-                            <div  id="addtocart"
+                            <div id="addtocart"
                                 class="add-to-cart ms-3 rounded-2 py-1 px-2 position-absolute top-50 start-50 translate-middle ms-5 mt-2">
                                 <iconify-icon class="btn fs-3"
                                     onclick="addToCart(12, 'Soft creme cheese with br greens Exquisa', 2.59, './images/cheese-with-cream.png')"
