--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                     <div class="d-flex justify-content-center ">
                         <input type="email" class="rounded-5 form-control  text-black" placeholder="You email"
                             style="width: 400px;">
-                        <button class="btn btn-danger rounded-5 px-2 py-2 mx-3 ">Subscribe</button>
+                        <button class="btn btn-danger btn-outline-light border-0 rounded-5 px-3  py-2 mx-3 ">Subscribe</button>
                     </div>
                 </div>
             </div>
@@ -801,57 +801,56 @@
                 <div class="col-md-2 col-sm-6 mb-4">
                     <h5>Categories</h5>
                     <ul class="list-unstyled">
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Weekly sale</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Special price</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Easter is coming</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Italian dinner</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Fresh fruits</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white" href="#">Exotic fruits</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Weekly sale</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Special price</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Easter is coming</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Italian dinner</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Fresh fruits</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white link-danger" href="#">Exotic fruits</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-6 mb-4">
                     <h5>Company</h5>
                     <ul class="list-unstyled">
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Blog and news</a>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Blog and news</a> </li>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">About us</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">FAQ page</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Contact us</a>
                         </li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">About us</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">FAQ page</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Contact us</a>
-                        </li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Careers</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Careers</a></li>
                     </ul>
                 </div>
                 <div class="col-md-2 col-sm-6 mb-4">
                     <h5>Account</h5>
                     <ul class="list-unstyled">
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Your account</a>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Your account</a>
                         </li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Shipping &
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Shipping &
                                 policies</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Refunds &
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Refunds &
                                 replacements</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Order
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Order
                                 tracking</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Delivery info</a>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Delivery info</a>
                         </li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Taxes & fees</a>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Taxes & fees</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-md-3 col-sm-6 mb-4">
                     <h5 class="">Customer service</h5>
                     <ul class="list-unstyled">
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Payment
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Payment
                                 methods</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Money back
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Money back
                                 guarantee</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Refunds &
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Refunds &
                                 replacements</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Order
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Order
                                 tracking</a></li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Delivery info</a>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Delivery info</a>
                         </li>
-                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal" href="#">Shipping</a></li>
+                        <li class="pt-2"><a class="text-decoration-none text-white fw-normal link-danger" href="#">Shipping</a></li>
                     </ul>
                 </div>
             </div>
